--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Areas/Admin/Views/AddProduct/Index.cshtml
@@ -2,6 +2,8 @@
 @using Model.entity
 @model Hoa_Chat_Thi_Nghiem_ASP_NET_MVC.Areas.Admin.Models.AddProductModel
 @{
+    /**/
+
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutPage.cshtml";
 }
@@ -78,10 +80,18 @@
 
 
 @{
+
     ArrayList result = (ArrayList)Session["List-Type-Status-Supplier-Product"];
     ArrayList ListTypeProduct = (ArrayList)result[0];
     ArrayList ListStatusProduct = (ArrayList)result[1];
     ArrayList ListSupplier = (ArrayList)result[2];
+
+    string noti = ViewBag.Notification != null ? ViewBag.Notification : "null";
+    string errorType = ViewBag.ErrorType != null ? ViewBag.ErrorType : "";
+    string errorStatus = ViewBag.ErrorStatus != null ? ViewBag.ErrorStatus : "";
+    string errorSupplier = ViewBag.ErrorSupplier != null ? ViewBag.ErrorSupplier : "";
+    string errorPathImage = ViewBag.ErrorPathImage != null ? ViewBag.ErrorPathImage : "";
+
 }
 
 <main class="app-content">
@@ -93,6 +103,7 @@
                     @*<form class="row">*@
                     @using (Html.BeginForm("AddNewProduct", "AddProduct"))
                     {
+                        @Html.AntiForgeryToken() <!--Tránh các request giả mạo-->
                         <div class="form-group col-md-3">
                             <label class="control-label">Tên sản phẩm</label>
                             @*<input class="form-control" type="text" name="TenSP">*@
@@ -119,48 +130,40 @@
                         </div>
                         <div class="form-group col-md-3">
                             <label for="exampleSelect1" class="control-label">Loại sản phẩm</label>
-                            <select class="form-control" id="exampleSelect1">
-                                @*<option>-- Chọn loại sản phẩm --</option>
-                                <option>Bàn ăn</option>
-                                <option>Bàn thông minh</option>
-                                <option>Tủ</option>
-                                <option>Ghế gỗ</option>
-                                <option>Ghế sắt</option>
-                                <option>Giường người lớn</option>
-                                <option>Giường trẻ em</option>
-                                <option>Bàn trang điểm</option>
-                                <option>Giá đỡ</option>*@
-                                @foreach(TypeProduct item in ListTypeProduct)
+                            <select class="form-control" id="exampleSelect1" name="LoaiSP">
+                                @foreach (TypeProduct item in ListTypeProduct)
                                 {
-                                     <option value="@item.Id_type">@item.Name_type</option>
+                                    <option value="@item.Id_type" @(item.Id_type == ViewBag.IdType ? "selected" : "")>@item.Name_type</option>
                                 }
                             </select>
+
+                            <div class="text-danger">@errorType</div>
+
                         </div>
                         <div class="form-group col-md-3 ">
                             <label for="exampleSelect1" class="control-label">Tình trạng</label>
-                            <select class="form-control" id="exampleSelect2">
-                                @*<option>-- Chọn tình trạng --</option>
-                                <option>Còn hàng</option>
-                                <option>Hết hàng</option>*@
-                                @foreach(StatusProduct st in ListStatusProduct)
+                            <select class="form-control" id="exampleSelect2" name="TinhTrangSP">
+                                @foreach (StatusProduct st in ListStatusProduct)
                                 {
-                                    <option value="@st.Id_status">@st.Name_status</option>
+                                    <option value="@st.Id_status" @(st.Id_status == ViewBag.IdStatus ? "selected" : "")>@st.Name_status</option>
                                 }
                             </select>
+
+                            <div class="text-danger">@errorStatus</div>
+
                         </div>
                         <div class="form-group col-md-3 ">
                             <label for="exampleSelect1" class="control-label">Nhà cung cấp</label>
-                            <select class="form-control" id="exampleSelect3">
-                                @*<option>-- Chọn nhà cung cấp --</option>
-                                <option>Phong vũ</option>
-                                <option>Thế giới di động</option>
-                                <option>FPT</option>
-                                <option>Admin</option>*@
-                                @foreach(Supplier sl in ListSupplier)
+                            <select class="form-control" id="exampleSelect3" name="NCC">
+                                @foreach (Supplier sl in ListSupplier)
                                 {
-                                    <option value="@sl.Id_supplier">@sl.Name_supplier</option>
+                                    <option value="@sl.Id_supplier" @(sl.Id_supplier == ViewBag.IdSupplier ? "selected" : "")>@sl.Name_supplier</option>
                                 }
                             </select>
+
+
+                            <div class="text-danger">@errorSupplier</div>
+
                         </div>
                         <div class="form-group col-md-12">
                             <label class="control-label">Mô tả sản phẩm</label>
@@ -176,7 +179,8 @@
                                     Chọn ảnh
                                 </a>
                                 <a id="myfileupload">
-                                    <input type="text" name="UrlImage" style="min-width:300px" />
+                                    <input type="text" name="UrlImage" style="min-width:300px" value="@(ViewBag.PathImage !=null ? ViewBag.PathImage:"")" />
+                                    <div class="text-danger">@errorPathImage</div>
                                 </a>
                                 <p style="clear:both"></p>
                             </div>
