--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Assets/shop/css/custom.css
@@ -12,3 +12,12 @@ img.custom-image-product {
     background-image: url('../images/labs/lab_01.jpg') !important;
     
 }
+.single-slider.zoom {
+    transition: transform .9s;
+}
+
+    .single-slider.zoom:hover {
+        -ms-transform: scale(1.5);
+        webkit-transform: scale(1.5);
+        transform: scale(1.5);
+    }
