--- a/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Products/ListProducts.cshtml
+++ b/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Hoa-Chat-Thi-Nghiem-ASP-NET-MVC/Views/Products/ListProducts.cshtml
@@ -1,13 +1,16 @@
-﻿
+﻿@using System.Collections;
+@using System.Collections.Generic;
+@using Model.entity;
 @{
     ViewBag.Title = "Danh sách sản phẩm";
     Layout = "~/Views/Share/Layout.cshtml";
+    var listProduct = ViewBag.ListProducts as List<Product>;
 }
 <div class="breadcrumbs py-4">
     <div class="container text-left">
         <ul class="bread-list d-inline-block">
-            <li class="d-inline-block text-capitalize"><a href="index.html">Trang chủ<i class="ti-arrow-right mx-2"></i></a></li>
-            <li class="d-inline-block text-capitalize"><a href="blog-single.html">Danh sách sản phẩm</a></li>
+            <li class="d-inline-block text-capitalize"><a href="/Home/Index">Trang chủ<i class="ti-arrow-right mx-2"></i></a></li>
+            <li class="d-inline-block text-capitalize"><a href="#">Danh sách sản phẩm</a></li>
         </ul>
     </div>
 </div>
@@ -48,17 +51,17 @@
                         <ul class="check-box-list mt-3">
                             <li class="mb-1">
                                 <label for="1">
-                                    <input id="1" type="checkbox">200,000đ - 500,000đ<span class="count">(13)</span>
+                                    <input id="1" type="checkbox">200,000đ - 500,000vnđ<span class="count">(13)</span>
                                 </label>
                             </li>
                             <li class="mb-1">
                                 <label for="2">
-                                    <input id="2" type="checkbox">500,000đ - 1,000,000đ<span class="count">(5)</span>
+                                    <input id="2" type="checkbox">500,000đ - 1,000,000vnđ<span class="count">(5)</span>
                                 </label>
                             </li>
                             <li>
                                 <label for="3">
-                                    <input id="3" type="checkbox">1,000,000đ - 2,500,000đ<span class="count">(8)</span>
+                                    <input id="3" type="checkbox">1,000,000đ - 2,500,000vnđ<span class="count">(8)</span>
                                 </label>
                             </li>
                         </ul>
@@ -80,42 +83,56 @@
                     </div>
                 </div>
                 <div class="row">
-                    @for(int i = 0; i< 9; i++) { 
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="single-product">
-                            <div class="product-img">
-                                <a href="/Products/ProductDetails">
-                                    <img  class="default-img" src="~/Assets/images/hoa_chat/acid-huu-co-1.jpg" />
-                                </a>
-                            </div>
-                            <div class="product-content">
-                                <a href="product-details.html">Acid Acetic 97 - 99%</a>
-                                <div class="rating">
-                                    <i class="yellow fa fa-star"></i>
-                                    <i class="yellow fa fa-star"></i>
-                                    <i class="yellow fa fa-star"></i>
-                                    <i class="yellow fa fa-star"></i>
-                                    <i class="fa fa-star"></i>
+                    @foreach (Product item in listProduct)
+                    {
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <div class="single-product">
+                                <div class="product-img">
+                                    <a href="@Url.Action("ProductDetails","Products", new {id = item.Id_product}) ">
+                                        <img class="default-img" src="@item.Url_img_product" />
+                                    </a>
                                 </div>
-                                <div class="product-price">
-                                    <span>2,900,000đ</span>
+                                <div class="product-content">
+                                    <a href="@Url.Action("ProductDetails","Products", new {id = item.Id_product})">@item.Name_product</a>
+                                    <div class="rating">
+                                        @for (int i = 0; i < item.Star; i++)
+                                        {
+                                            <i class="yellow fa fa-star"></i>
+                                        }
+                                        @for (int i = item.Star; i < 5; i++)
+                                        {
+                                            <i class="fa fa-star"></i>
+                                        }
+                                    </div>
+                                    <div class="product-price">
+                                        @if (item.Listed_price != item.Current_price)
+                                        {
+                                            <span class="old">@string.Format("{0:0,0 vnđ}", item.Listed_price)  </span>
+                                            <br />
+                                            <span>@string.Format("{0:0,0 vnđ}", item.Current_price)</span>
+                                        }
+                                        else
+                                        {
+                                            <br />
+                                            <span>@string.Format("{0:0,0 vnđ}", item.Current_price)</span>
+                                        }
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>}
+                        </div>}
                 </div>
 
                 <!-- Pagination -->
                 <div class="pagination d-flex justify-content-center mt-5">
                     <div class="pagination-container">
                         <a class="control" href="#"><i class="bi-chevron-left"></i></a>
-                        <a href="#">1</a>
+                        <a class="active" href="#">1</a>
                         <a href="#">2</a>
-                        <a class="active" href="#">3</a>
+                        <a href="#">3</a>
                         <a href="#">4</a>
                         <a href="#">5</a>
                         <a href="#">6</a>
-                        <a href="#">137</a>
+                        <a href="#">15</a>
                         <a class="control" href="#"><i class="bi-chevron-right"></i></a>
                     </div>
                 </div>
@@ -123,3 +140,32 @@
         </div>
     </div>
 </section>
+
+@*@section scripts{
+    <script>
+        var pageSize = 4;
+        var pageCount = Math.ceil(1 * @ViewBag.ListProducts.Count/ pageSize);
+
+            alert(pageCount);
+        //function LoadData() {
+        //    $.ajax({
+        //        url: '/Products/GetData',
+        //        type: 'GET',
+        //        success: function (res) {
+        //            if (res.TotalItems > 0) {
+        //                var items = res.Data;
+        //                var pageNumber = Math.ceil(res.TotalItems / pageSize);
+        //                var html = "";
+        //                for (let i = 0; i < res.TotalItems; i++) {
+        //                 document.getElementsByClassName("product-content").innerHTML = items[i].Name_product
+
+        //                }
+
+        //            }
+        //        }
+        //    });
+        //}
+    </script>
+
+
+}*@
